nivasa-macros/tests/trybuild/controller_pipe_empty.stderr
error: `#[pipe]` requires at least one pipe type
 --> tests/trybuild/controller_pipe_empty.rs:9:5
  |
9 |     #[nivasa_macros::pipe()]
  |     ^
